--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "test": "jest --watchAll",
+    "lint": "expo lint",
+    "prebuild": "npx expo prebuild",
+    "build:preview": "eas build --profile preview",
+    "build:prod": "eas build --profile production",
+    "build:dev": "eas build --profile development",
+    "update:preview": "eas update --branch preview --message"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
