--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-image": "~2.3.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.6",
+    "expo-mail-composer": "~14.1.5",
     "expo-router": "~5.1.2",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
