--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@legendapp/list": "^1.1.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-menu/menu": "1.2.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -52,6 +53,8 @@
     "react-hook-form": "^7.59.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-ios-context-menu": "3.1.0",
+    "react-native-ios-utilities": "5.1.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -60,6 +63,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "zeego": "^3.0.6",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
   },
