--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@rn-primitives/select": "^1.2.0",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "expo": "53.0.17",
     "expo-application": "~6.1.5",
@@ -47,7 +49,9 @@
     "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "input-otp-native": "^0.5.0",
+    "lucide-react-native": "^0.525.0",
     "moti": "^0.30.0",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.59.0",
@@ -63,6 +67,7 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "tailwind-merge": "^3.3.1",
     "zeego": "^3.0.6",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
@@ -73,6 +78,8 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3"
   },
   "private": true
