--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.59.0",
     "react-native": "0.79.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-ios-context-menu": "3.1.0",
     "react-native-ios-utilities": "5.1.2",
