--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@legendapp/list": "^1.1.4",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-menu/menu": "1.2.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
