--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-menu/menu": "^1.2.3",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -63,6 +64,7 @@
     "react-native-ios-context-menu": "3.1.0",
     "react-native-ios-utilities": "5.1.2",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-responsive-fontsize": "^0.5.1",
