--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@rn-primitives/select": "^1.2.0",
+    "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/tabs": "^1.2.0",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
