--- a/app.json
+++ b/app.json
@@ -40,6 +40,14 @@
           "imageWidth": 200
         }
       ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos.",
+          "savePhotosPermission": "Allow $(PRODUCT_NAME) to save pdf.",
+          "isAccessMediaLocationEnabled": true
+        }
+      ],
       "expo-mail-composer"
     ],
     "experiments": {
