--- a/package.json
+++ b/package.json
@@ -29,9 +29,6 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@rn-primitives/select": "^1.2.0",
-    "@rn-primitives/slot": "^1.2.0",
-    "@rn-primitives/table": "^1.2.0",
-    "@rn-primitives/tabs": "^1.2.0",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
@@ -40,17 +37,13 @@
     "expo-application": "~6.1.5",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
-    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-mail-composer": "~14.1.5",
-    "expo-media-library": "~17.1.7",
-    "expo-print": "~14.1.4",
     "expo-router": "~5.1.3",
-    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -76,7 +69,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
-    "react-native-view-shot": "^4.0.3",
+    "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "tailwind-merge": "^3.3.1",
